--- a/sign-uppage.html
+++ b/sign-uppage.html
@@ -45,8 +45,8 @@
         <p><textarea name="answer" value="answer" cols="25" rows="5" placeholder="Enter your answer"  ></textarea></p>
         <p><input type="checkbox" name="accept all terms and conditions">I agree all terms and conditions.</p>
         <input type="submit" value="submit" submit>
-        <p><a href="/forms-in-html/loginpage.html">Already have an account</a></p>
-        <p>OR go to <a href="/forms-in-html/homepage.html">Home</a>  page</p>
+        <p><a href="./loginpage.html">Already have an account</a></p>
+        <p>OR go to <a href="./homepage.html">Home</a>  page</p>
         </section>
     </form>
 </body>
