--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
         .stl1{
             text-align: center;
             background-color: lightpink;
+            border-radius: 100px;
             margin-top: 100px;
             margin-bottom: 100px;
             margin-right: 400px;
@@ -14,15 +15,18 @@
             font-size: 20px;
             padding: 20px;
         }
+        .img1{
+            border-radius: 100px;
+        }
     </style>
 </head>
 <body>
     
     <section class="stl1">
-        <img src="home.jpg">
+        <img class="img1" src="home.jpg">
    
-    <h2><a href="/forms-in-html/loginpage.html">login</a></h2>
-    <h2> <a href="/forms-in-html/sign-uppage.html">sign-up</a></h2>
+    <h2><a href="./loginpage.html">login</a></h2>
+    <h2><a href="./sign-uppage.html">sign-up</a></h2>
 </section>
 </body>
 </html>
