--- a/loginpage.html
+++ b/loginpage.html
@@ -37,10 +37,10 @@
     </div>
     <br>
     <div>
-        <input type="submit" name="lagin" value="login">
+        <input type="submit" name="login" value="login">
     </div>
-    <a href="/forms-in-html/sign-uppage.html">create an acoount </a>
-    <p>OR go to <a href="/forms-in-html/homepage.html">Home</a>  page</p>
+    <a href="./sign-uppage.html">create an acoount </a>
+    <p>OR go to <a href="./homepage.html">Home</a>  page</p>
     </section>
     </form>
 </body>
